--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=realestatecrm
 # MySQL Database Configuration
 
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/aj_awt_project?useSSL=false&serverTimezone=IST
+spring.datasource.url=jdbc:mysql://localhost:3306/aj_project?serverTimezone=Asia/Kolkata
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate dialect for MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Enable JPA Repositories
 spring.jpa.hibernate.ddl-auto=update
