--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,16 @@ spring.application.name=realestatecrm
 # MySQL Database Configuration
 
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/aj_project?serverTimezone=Asia/Kolkata
+spring.datasource.url=jdbc:mysql://localhost:3306/aj_awt_project?serverTimezone=Asia/Kolkata&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate dialect for MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Configure Hibernate naming strategy to preserve exact column names
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Enable JPA Repositories
 spring.jpa.hibernate.ddl-auto=update
@@ -18,3 +21,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Enable Logging for SQL Queries
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# JWT Configuration
+app.jwt.secret=realEstateCrmSecretKey2025ForSecureAuthenticationToken
+app.jwt.expirationMs=86400000
+
+# Allow validation error messages to be shown
+server.error.include-message=always
+server.error.include-binding-errors=always
