--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=realestatecrm
 # MySQL Database Configuration
 
 # DataSource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/aj_project?serverTimezone=Asia/Kolkata
+spring.datasource.url=jdbc:mysql://localhost:3306/aj_awt_project?serverTimezone=Asia/Kolkata&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
