working login / register and client add / read

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 app.jwt.secret=realEstateCrmSecretKey2025ForSecureAuthenticationToken
 app.jwt.expirationMs=86400000
 
+# Server Port Configuration
+server.port=5001
+
 # Allow validation error messages to be shown
 server.error.include-message=always
 server.error.include-binding-errors=always
